# church_erp

./: .env.example  .gitignore  app.py  config.py  pyproject.toml
app/: __init__.py
app/blueprints/main/: __init__.py
app/config/: __init__.py
app/extensions/: __init__.py
app/models/: __init__.py  base.py  user.py  vendor.py
app/static/css/: custom.css  placeholders.css
app/templates/: base.html  index.html
app/utils/: decorators.py
migrations/versions/: aa63ae2b4ddc_initial_migration.py
templates/: base.html  index.html  sandbox.html
