[project]
name = "church-erp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
]

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "flask-debugtoolbar>=0.16.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
